# sports-data-mcp

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
scripts/: generate_evals.py
src/sports_data_mcp/: __init__.py  cache.py  config.py  http_client.py  resilience.py  server.py  single_flight.py  stub.py  types.py
src/sports_data_mcp/names/: resolver.py
src/sports_data_mcp/sports/: base.py  mlb.py  nba.py
src/sports_data_mcp/stats/: canonical.py  resolver.py
src/sports_data_mcp/tools/: contract.py  structured.py
tests/: test_cache.py  test_config.py  test_resilience.py  test_server.py  test_single_flight.py
tests/cassettes/gemini/: test_name_resolver_resolve_nba.yaml  test_stat_resolver_gemini_tier.yaml
tests/cassettes/mlb/: league_leaders_happy.yaml  player_game_log_happy.yaml  team_game_log_happy.yaml  team_history_happy.yaml  team_stats_happy.yaml
tests/cassettes/nba/: league_leaders_happy.yaml  player_game_log_happy.yaml  player_stats_happy.yaml  team_game_log_happy.yaml  team_history_happy.yaml  team_stats_happy.yaml
tests/evals/: README.md  config.yaml  harness.py  models.py  seeds.yaml  test_harness.py  test_schema.py
tests/golden/: mlb.yaml  nba.yaml
tests/names/: test_name_resolver.py
tests/sports/: test_base.py  test_mlb.py  test_nba.py
tests/sports/__snapshots__/: test_mlb.ambr  test_nba.ambr
tests/stats/: test_stat_resolver.py
tests/tools/: test_structured.py
