[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sports-data-mcp"
version = "0.1.0"
description = "StatMuse-style historical sports query access via MCP"
authors = []
readme = "README.md"
packages = [{ include = "sports_data_mcp", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
pydantic = ">=2.0"
pyyaml = ">=6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-xdist = ">=3.0"
vcrpy = ">=6.0"
responses = ">=0.25"
respx = ">=0.21"
hypothesis = ">=6.0"
syrupy = ">=4.0"
ruff = ">=0.4"
google-generativeai = ">=0.8"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

# ---------------------------------------------------------------------------
# Default model IDs (§5.3) — can be overridden via env vars
#
# Both SPORTS_MCP_MODEL and SPORTS_MCP_EVAL_GENERATOR_MODEL use Gemini 2.0 Flash.
# The project is completely free — only requires a free GEMINI_API_KEY from
# Google AI Studio (ai.google.dev) — 1,500 req/day, 15 RPM, no billing required.
#
# Verify the latest stable Gemini Flash model ID at:
#   https://ai.google.dev/gemini-api/docs/models/gemini
# ---------------------------------------------------------------------------
[tool.sports_data_mcp]
default_model = "gemini-2.0-flash"
default_eval_generator_model = "gemini-2.0-flash"
